# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: check_print.py
