[metadata]
name = pre_commit_hooks
description = @gustavkrist's pre-commit hooks
version = 1.0.0
author = Gustav Kristensen

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check-print = pre_commit_hooks.check_print:main

[flake8]
extend-ignore = E203
exclude =
  .git,
  __pycache__
max-line-length = 88

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
